@@ -1,3 +1,8 @@
+2013-02-13 Molnar Karoly <molnarkaroly AT users.sf.net>
+
+	* support/scripts/mcs51-disasm.pl:
+	  Use default sfr and sbit names if no header file.
+
 2013-02-11 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
 
 	* src/stm8/gen.c:
